[workspace]
members = ["crates/agent", "crates/shared", "lib/firecracker-sdk"]
resolver = "3"

[workspace.dependencies]
tokio = { version = "1.49.0", features = [
    "macros",
    "rt-multi-thread",
    "io-util",
    "process",
    "fs",
    "time",
] }
tokio-vsock = { version = "0.7.2" }
vsock = { version = "0.5.2" }
tempfile = { version = "3.24.0" }
thiserror = { version = "2.0.18" }
serde = { version = "1.0.228", features = ["derive"] }
postcard = { version = "1.1.3", features = ["alloc"], default-features = false }
futures = { version = "0.3.31" }
cgroups-rs = { version = "0.5.0" }
tokio-retry = { version = "0.3.0" }
libseccomp = { version = "0.4.0" }
libc = { version = "0.2.180" }
