[package]
name = "agent"
version = "0.0.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
tokio-vsock = { workspace = true }
thiserror = { workspace = true }
postcard = { workspace = true }
tempfile = { workspace = true }
futures = { workspace = true }
cgroups-rs = { workspace = true }
shared = { path = "../shared" }
