[package]
name = "firecracker-sdk"
version = "0.0.0"
edition = "2024"

[dependencies]
paste = { version = "1.0.15" }
serde = { version = "1.0.228", features = ["derive"] }
serde_with = { version = "3.16.1" }
serde_json = { version = "1.0.149" }
hyper = { version = "1.8.1" }
hyperlocal = { version = "0.9.1" }
http-body-util = { version = "0.1.3", features = ["full"] }
hyper-util = "0.1.20"
thiserror = { version = "2.0.18" }
tokio = { version = "1.46", features = ["full"] }
percent-encoding = "2.3"
